import { makeTestFixture, snapshotEverything, nextTick, logStep, nextMicroTick } from "../helpers";
import { mount, Component, proxy, xml, App } from "../../src";

snapshotEverything();

let fixture: HTMLElement;

beforeEach(() => {
  fixture = makeTestFixture();
});

describe("event handling", () => {
  test("handler receive the event as argument", async () => {
    class Child extends Component {
      static template = xml`<div>simple vnode</div>`;
    }

    class Parent extends Component {
      static template = xml`<span t-on-click="this.inc"><Child/><t t-out="this.state.value"/></span>`;
      static components = { Child };
      state = proxy({ value: 1 });
      inc(ev: any) {
        this.state.value++;
        expect(ev.type).toBe("click");
      }
    }

    await mount(Parent, fixture);
    expect(fixture.innerHTML).toBe("<span><div>simple vnode</div>1</span>");

    fixture.querySelector("div")!.click();
    await nextTick();
    expect(fixture.innerHTML).toBe("<span><div>simple vnode</div>2</span>");
  });

  test("each element runs its own handler when a child block sits among them (Odoo's CustomColorPicker)", async () => {
    const calls: string[] = [];
    class Picker extends Component {
      static template = xml`
        <div class="root" t-on-click="() => this.log('click')" t-on-keydown="() => this.log('rootkey')">
          <div class="area" t-on-pointerdown="() => this.log('area')">
            <div id="pointer" t-on-keydown="() => this.log('pointerkey')"/>
          </div>
          <div class="slider" t-if="this.show" t-on-pointerdown="() => this.log('slider')">
            <div class="sp" t-on-keydown="() => this.log('sliderkey')"/>
          </div>
          <input class="hex" t-on-input="() => this.log('input')"/>
        </div>`;
      show = true;
      log(name: string) {
        calls.push(name);
      }
    }
    await mount(Picker, fixture);
    fixture
      .querySelector("#pointer")!
      .dispatchEvent(new KeyboardEvent("keydown", { bubbles: true }));
    fixture.querySelector(".sp")!.dispatchEvent(new KeyboardEvent("keydown", { bubbles: true }));
    fixture.querySelector(".hex")!.dispatchEvent(new Event("input", { bubbles: true }));
    fixture.querySelector(".area")!.dispatchEvent(new Event("pointerdown", { bubbles: true }));
    expect(calls).toEqual(["pointerkey", "rootkey", "sliderkey", "rootkey", "input", "area"]);
  });

  test("Invalid handler throws an error", async () => {
    window.addEventListener(
      "error",
      (ev) => {
        logStep(ev.error.message);
        ev.preventDefault();
      },
      { once: true }
    );

    class Parent extends Component {
      static template = xml`<button t-on-click="this.dosomething">click</button>`;

      doSomething() {}
    }

    await mount(Parent, fixture);
    expect([]).toBeLogged();
    fixture.querySelector("button")!.click();
    expect([
      `Invalid handler expression: the \`t-on\` expression should evaluate to a function, but got 'undefined'. Did you mean to use an arrow function? (e.g. \`t-on-click="() => expr"\`)`,
    ]).toBeLogged();
  });

  test("support for callable expression in event handler", async () => {
    class Counter extends Component {
      static template = xml`
      <div><t t-out="this.state.value"/><input type="text" t-on-input="this.obj.onInput"/></div>`;
      state = proxy({ value: "" });
      obj = { onInput: (ev: any) => (this.state.value = ev.target.value) };
    }

    await mount(Counter, fixture);
    await nextTick();
    expect(fixture.innerHTML).toBe(`<div><input type="text"></div>`);
    const input = fixture.getElementsByTagName("input")[0];
    input.value = "test";
    input.dispatchEvent(new Event("input"));
    await nextTick();
    expect(fixture.innerHTML).toBe(`<div>test<input type="text"></div>`);
  });

  test("t-on with handler bound to dynamic argument on a t-foreach", async () => {
    let onClickArgs: [number, MouseEvent] | null = null;
    class Parent extends Component {
      static template = xml`
        <div>
          <t t-foreach="this.items" t-as="item" t-key="item">
            <div class="item" t-on-click="ev => this.onClick(item, ev)"/>
          </t>
        </div>`;
      items = [1, 2, 3, 4];
      onClick(n: number, ev: MouseEvent) {
        onClickArgs = [n, ev];
      }
    }

    await mount(Parent, fixture);
    expect(onClickArgs).toBeNull();
    (<HTMLElement>fixture.querySelector(".item")).click();
    expect(onClickArgs![0]).toBe(1);
    expect(onClickArgs![1]).toBeInstanceOf(MouseEvent);
  });

  test("objects from scope are properly captured by t-on", async () => {
    let onClickArgs: [number, MouseEvent] | null = null;
    class Parent extends Component {
      static template = xml`
        <div>
          <t t-foreach="this.items" t-as="item" t-key="item">
            <div class="item" t-on-click="ev => this.onClick(item.val, ev)"/>
          </t>
        </div>`;
      items = [{ val: 1 }, { val: 2 }, { val: 3 }, { val: 4 }];
      onClick(n: number, ev: MouseEvent) {
        onClickArgs = [n, ev];
      }
    }
    await mount(Parent, fixture);
    expect(onClickArgs).toBeNull();
    (<HTMLElement>fixture.querySelector(".item")).click();
    expect(onClickArgs![0]).toBe(1);
    expect(onClickArgs![1]).toBeInstanceOf(MouseEvent);
  });

  test("handler is not called if component is destroyed", async () => {
    class Parent extends Component {
      static template = xml`<span t-on-click="this.click"/>`;
      click() {
        logStep("click");
      }
    }

    const app = new App();
    await app.createRoot(Parent).mount(fixture);
    const span = fixture.querySelector("span")!;

    span.click();
    expect(["click"]).toBeLogged();

    app.destroy();
    expect([]).toBeLogged();

    span.click();
    expect([]).toBeLogged();
  });

  test("input blur event is not called if component is destroyed", async () => {
    class Child extends Component {
      static template = xml`<input t-on-blur="this.blur"/>`;

      blur() {
        logStep("blur");
      }
    }
    class Parent extends Component {
      static template = xml`
      <div>
        <t t-if="this.state.cond"><Child/></t>
        <textarea/>
      </div>`;
      static components = { Child };

      state = proxy({ cond: true });
    }

    const parent = await mount(Parent, fixture);

    fixture.querySelector("input")!.focus();
    await nextMicroTick();
    // to unfocus input
    fixture.querySelector("textarea")!.focus();
    expect(["blur"]).toBeLogged();

    fixture.querySelector("input")!.focus();
    parent.state.cond = false;
    await nextTick();
    // input is removed when component is destroyed => nothing should happen
    expect([]).toBeLogged();
  });

  test("handler works when app is mounted in an iframe", async () => {
    let clickCount = 0;

    class Parent extends Component {
      static template = xml`<span t-on-click="this.inc">click me</span>`;
      inc() {
        clickCount++;
      }
    }
    const iframe = document.createElement("iframe");
    fixture.appendChild(iframe);
    const iframeDoc = iframe.contentDocument!;
    await mount(Parent, iframeDoc.body);
    expect(clickCount).toBe(0);
    iframeDoc.querySelector("span")!.click();
    expect(clickCount).toBe(1);
  });

  test("unnamed slot should call the event only once", async () => {
    let clickCount = 0;
    class Child extends Component {
      static template = xml`<t t-call-slot="named"/><t t-call-slot="default" />`;
    }
    class Parent extends Component {
      static components = { Child };
      static template = xml`
        <Child t-on-click="this.inc">
          <t t-set-slot="named">
            <div class="named" />
          </t>
          <div class="default unnamed" />
        </Child>
      `;
      inc() {
        clickCount++;
      }
    }

    await mount(Parent, fixture);
    expect(clickCount).toBe(0);
    (fixture.querySelector(".named") as HTMLDivElement).click();
    expect(clickCount).toBe(1);
    (fixture.querySelector(".unnamed") as HTMLDivElement).click();
    expect(clickCount).toBe(2);
  });
});

test("a handler receives the event alone, with no trailing argument", async () => {
  let received: unknown[] = [];
  class Comp extends Component {
    static template = xml`<button t-on-click="(...args) => this.onClick(...args)">x</button>`;
    onClick(...args: unknown[]) {
      received = args;
    }
  }
  await mount(Comp, fixture);
  fixture.querySelector("button")!.click();
  expect(received.length).toBe(1);
  expect(received[0]).toBeInstanceOf(Event);
});
