// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a handler receives the event alone, with no trailing argument 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  const hdlr_fn1 = (ctx,..._args)=>ctx['this'].onClick(..._args);
  
  let block1 = createBlock(\`<button block-handler-0="click">x</button>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`event handling > Invalid handler throws an error 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].dosomething, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click">click</button>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`event handling > each element runs its own handler when a child block sits among them (Odoo's CustomColorPicker) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['this'].log('click');
  const hdlr_fn2 = (ctx)=>ctx['this'].log('rootkey');
  const hdlr_fn3 = (ctx)=>ctx['this'].log('area');
  const hdlr_fn4 = (ctx)=>ctx['this'].log('pointerkey');
  const hdlr_fn5 = (ctx)=>ctx['this'].log('slider');
  const hdlr_fn6 = (ctx)=>ctx['this'].log('sliderkey');
  const hdlr_fn7 = (ctx)=>ctx['this'].log('input');
  
  let block1 = createBlock(\`<div class="root" block-handler-0="click" block-handler-1="keydown"><div class="area" block-handler-2="pointerdown"><div id="pointer" block-handler-3="keydown"/></div><block-child-0/><input class="hex" block-handler-4="input"/></div>\`, [hdlr_fn1, hdlr_fn2, hdlr_fn3, hdlr_fn4, hdlr_fn7]);
  let block2 = createBlock(\`<div class="slider" block-handler-0="pointerdown"><div class="sp" block-handler-1="keydown"/></div>\`, [hdlr_fn5, hdlr_fn6]);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].show) {
      b2 = block2([ctx, ctx]);
    }
    return block1([ctx, ctx, ctx, ctx, ctx], [b2]);
  }
}"
`;

exports[`event handling > handler is not called if component is destroyed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].click, ctx, ev);
  
  let block1 = createBlock(\`<span block-handler-0="click"/>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`event handling > handler receive the event as argument 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, createComponent, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].inc, ctx, ev);
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<span block-handler-0="click"><block-child-0/><block-child-1/></span>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    const b3 = safeOutput(ctx['this'].state.value, node, key, "\\u00022");
    return block1([ctx], [b2, b3]);
  }
}"
`;

exports[`event handling > handler receive the event as argument 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>simple vnode</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`event handling > handler works when app is mounted in an iframe 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].inc, ctx, ev);
  
  let block1 = createBlock(\`<span block-handler-0="click">click me</span>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`event handling > input blur event is not called if component is destroyed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><textarea/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.cond) {
      b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`event handling > input blur event is not called if component is destroyed 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].blur, ctx, ev);
  
  let block1 = createBlock(\`<input block-handler-0="blur"/>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`event handling > objects from scope are properly captured by t-on 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey } = helpers;
  const hdlr_fn1 = (ctx,_ev)=>ctx['this'].onClick(ctx['item'].val,_ev);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div class="item" block-handler-0="click"/>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block2[i1];
      const key1 = ctx['item'];
      c_block2[i1] = withKey(block3([ctx]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`event handling > support for callable expression in event handler 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].obj.onInput, ctx, ev);
  
  let block1 = createBlock(\`<div><block-child-0/><input type="text" block-handler-0="input"/></div>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.value, node, key, "\\u00021");
    return block1([ctx], [b2]);
  }
}"
`;

exports[`event handling > t-on with handler bound to dynamic argument on a t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey } = helpers;
  const hdlr_fn1 = (ctx,_ev)=>ctx['this'].onClick(ctx['item'],_ev);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div class="item" block-handler-0="click"/>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block2[i1];
      const key1 = ctx['item'];
      c_block2[i1] = withKey(block3([ctx]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`event handling > unnamed slot should call the event only once 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { markRaw, createComponent, createCatcher, callHandler } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].inc, ctx, ev);
  const catcher1 = createCatcher({"click":0}, [hdlr_fn1]);
  
  let block1 = createBlock(\`<div class="named"/>\`);
  let block2 = createBlock(\`<div class="default unnamed"/>\`);
  
  function slot1(ctx, node, key = "") {
    return block1();
  }
  
  function slot2(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    return catcher1(comp1({slots: markRaw({"named": {__render: slot1, __ctx: ctx, __owner: this}, "default": {__render: slot2, __ctx: ctx, __owner: this}})}, key + \`\\u00021\`, node, this, null), ctx);
  }
}"
`;

exports[`event handling > unnamed slot should call the event only once 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key + \`\\u00021\`, "named", false, null);
    const b3 = callSlot(ctx, node, key + \`\\u00022\`, "default", false, null);
    return multi([b2, b3]);
  }
}"
`;
